<resources>
    <string name="base_language">en</string>
    <string name="home">首页</string>
    <string name="app_id">557d680a</string>
    <string name="app_name">声控魔法师</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edite">编辑</string>
    <string name="add">增加</string>
    <string name="back">返回</string>
    <string name="actionOne">仅一次</string>
    <string name="tab_icon_main">首页</string>
    <string name="tab_icon_home">家居</string>
    <string name="tab_icon_mode">集合</string>
    <string name="tab_icon_sensor">传感</string>
    <string name="tab_icon_my">我的</string>
    <string name="mode1">模式</string>
    <string name="set_file">为默认专案</string>
    <string name="senceSet">情景集合</string>
    <string name="room">房间</string>
    <string name="arcemanger">将设备放在不同的区域,方便管理</string>
    <string name="arcSort">首页显示的区域(长按移动排序)</string>
    <string name="arcmore">点击添加更多区域</string>
    <string name="devicesearch">设备搜索中……</string>
    <string name="load_data">请稍后，正在获取数据</string>
    <string name="device_key">请按下你要配对的设备按键</string>
    <string name="is_del_device">是否要删除当前设备</string>
    <string name="is_del_learn">是否要学习当前设备</string>
    <string name="is_save_mode">该模式被修改,是否要存储情景</string>
    <string name="sensor">传感控制</string>
    <string name="type">类型</string>
    <string name="product">产品</string>
    <string name="Io">回路</string>
    <string name="nodevice">未知设备</string>
    <string name="arceEdite">房间管理</string>
    <string name="deviceTiming">设备定时</string>
    <string name="qucksearch">快速搜索</string>
    <string name="cleanAllTimer">清除所有定时</string>
    <string name="my_device">我的设备</string>
    <string name="products_name">产品类型</string>
    <string name="products_name_info">支持多样化的产品类型</string>
    <string name="filemanger">专案管理</string>
    <string name="moreLanguage">多语言</string>
    <string name="save">保存</string>
    <string name="allArce">全部区域</string>
    <string name="allType">全部类型</string>
    <string name="all">默认全部</string>
    <string-array name="mode">
        <item>添加情景</item>
        <item>查存储量</item>
        <item>查询空间</item>
    </string-array>
    <string name="sence">情景</string>
    <string name="learn">学习</string>
    <string name="sence_list">情景列表</string>
    <string name="set">集合</string>
    <string name="tip">温馨提示</string>
    <string name="tipinfo">提示信息</string>
    <string name="datadown">数据下载</string>
    <string name="downing">正在下载,是否返回</string>
    <string name="sencdevice">情景设备</string>
    <string name="anhonginfo">安防提示信息</string>
    <string name="getdatefail">获取数据失败</string>
    <string name="isOne">已是第一首</string>
    <string name="stopPlay">停止播放</string>
    <string name="isLast">已是最后一首</string>
    <string name="sure">确 定</string>
    <string name="cancle">取 消</string>
    <string name="isDelArce">是否删除空间及空间所有设备!</string>
    <string name="isDelRedFra">是否删除当前红外按钮!</string>
    <string name="sence_name">情景名称</string>
    <string name="namebeing">名称存在</string>
    <string name="sence_id">场景ID</string>
    <string name="sence_info">点击图标进入编辑状态,长按列表拖动排序</string>
    <string name="actionsence">执行场景</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="alia">别名(多个别名用,分开)</string>
    <string name="sence_type">场景类型</string>
    <string name="select_image">选择图片</string>
    <string name="sence_msg">场景是一组设备联动集合,可以一键完成复杂的控制</string>
    <string name="add_sence">添加场景</string>
    <string name="selectType">请选择类型</string>
    <string name="inputModeCode">请输入场景代码0-254</string>
    <string name="modeCodeNull">场景代码不能为空</string>
    <string name="modeNameNull">场景名称不能为空</string>
    <string name="modeTypeNull">场景类型不能为空</string>
    <string name="modeImage">请选择图片</string>
    <string name="isDelMode">是否删除模式及所有关联场景</string>
    <string name="isDelFile">是否删除当前项目</string>
    <string name="isDelDevice">是否删除设备及关联的数据</string>
    <string name="isDelUser">是否删除用户及关联的数据</string>
    <string name="isDelModeList">是否删除该情景</string>
    <string name="addArce">添加区域</string>
    <string name="addSuccess">添加成功!</string>
    <string name="updateSuccess">修改成功!</string>
    <string name="deleteSuccess">删除成功!</string>
    <string name="end_start">结束时间不能小于开始时间</string>
    <string name="eightmode">默认8个模式只能修改不能删除</string>
    <string name="deleteFail">删除失败!</string>
    <string name="exist">存在</string>
    <string name="nameLable">名称</string>
    <string name="nameLable_msg">设备名称</string>
    <string name="deviceType">设备类型</string>
    <string name="camera_name">摄像机</string>
    <string name="deviceId">设备ID</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="input_content">请在这里输入类容</string>
    <string name="CQR">扫描二维码</string>
    <string name="list">列表</string>
    <string name="addSence">添加场景</string>
    <string name="addDevice">添加设备</string>
    <string name="modeSet">场景集合</string>
    <string name="line">在线</string>
    <string name="no_roles">您没有控制权限,请联系管理员</string>
    <string name="editeDevice">编辑设备</string>
    <string name="finish">完成</string>
    <string name="sence_time">场景定时</string>
    <string name="isDelGateWay">是否删除当前网关!</string>
    <string name="start_voice">开始录音</string>
    <string name="voice_err">主人,你好像没有说话哦!</string>
    <string name="no_match">没有匹配结果</string>
    <string name="result">【结果】</string>
    <string name="result_1">【置信度】</string>
    <string name="is_j">是否将</string>
    <string name="add_relay">添加到中继</string>
    <string name="fromrelay">从中继</string>
    <string name="moving">移除</string>
    <string name="no_into_relay">该设备没有被创建,不能进入中继列表</string>
    <string name="no_device">设备不存在</string>
    <string name="cleanTime">清除预约定时?</string>
    <string name="makeTime">预约定时? </string>
    <string name="makeTime1">预约定时</string>
    <string name="clean">清除</string>
    <string name="alredy">已</string>
    <string name="stop">停止</string>
    <string name="next_song">下一首</string>
    <string name="stopInfo">停</string>
    <string name="isCleanDevice">是否清空云之声设备!</string>
    <string name="is_clean">是否清空</string>
    <string name="book_search">预约查询</string>
    <string name="book_tine">设置的预约时间</string>
    <string name="curr_p_n">当前所有人数</string>
    <string name="clean_all">清空全部</string>
    <string name="pre_song">上一首</string>
    <string name="pe_set">人数设定</string>
    <string name="set_pe">设定人数</string>
    <string name="select_pe">请选择人数</string>
    <string name="pe_on_off">人数开关</string>
        <string name="isCleanVoice">是否清空云之声智能问答!</string>
    <string name="no_code_num">未设置情景代码编号!</string>
    <string name="selectSpace">空间选择</string>
    <string name="senceId">情景ID</string>
    <string name="spaceNoExist">选择空间不存在!</string>
    <string name="tempu">温度加一</string>
    <string name="tempd">温度减一</string>
    <string name="tempC">温度</string>
    <string name="modeswitch">模式切换</string>
    <string name="open_1">打开</string>
    <string name="close_1">关闭</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="open_2">开启</string>
    <string name="cleanAllTime">确定清除所有预约定时?</string>
    <string name="hour">小时</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="evening">晚上</string>
    <string name="senceSort">长按移动排序</string>
    <string name="deviceSort">长按移动排序</string>
    <string name="dateFresh">数据更新</string>
    <string name="zhiLing">灯光全开-灯光全关-照明全开-照明全关-窗帘全开-窗帘全关-调光全开-调关全开-调光圈开-调光全关-调光圈关-调关全关-彩灯全开-彩灯圈开-彩灯全关-彩灯圈关-空调全开-空调全关-背景音乐全开-背景音乐全关-空间选择-选择空间-开启空间-打开空间-全部空间-退出空间-取消全部预约-取消定时控制-查询定时空間-开启监控-监控开启-校准网关时间-时间校准-读取网关时间-系统撤防-保全系统解除-保全系统设定-系统布防-解除报警</string>
    <string name="air_set_auto">已设定自动</string>
    <string name="air_set_cold">已设定制冷</string>
    <string name="air_set_hot">已设定制热</string>
    <string name="all_open">灯光全开</string>
    <string name="all_close">灯光全关</string>
    <string name="device_close">设备全关</string>
    <string name="hot">制热</string>
    <string name="cool">制冷</string>
    <string name="speedswitch">风量切换</string>
    <string name="openzc">已开启侦测</string>
    <string name="is_cancle_bind">是否取消投影机绑定</string>
    <string name="air_set_wind">已设定送风</string>
    <string name="air_set_clean">已设定除湿</string>
    <string name="allset">已设定</string>
    <string name="degree">度</string>
    <string name="uper">加</string>
    <string name="low">降</string>
    <string name="air_name">名称:</string>
    <string name="select_name">选择</string>
    <string name="air_pre">上一笔</string>
    <string name="air_next">下一笔</string>
    <string name="air_send">发射</string>
    <string name="air_study">学习</string>
    <string name="input_air_name">输入名称</string>
    <string name="alUplevel">已调高亮度</string>
    <string name="aldownlevel">已调低亮度</string>
    <string name="delayTime">延时</string>
    <string name="delay">延后</string>
    <string name="fiveProjector">05:投影机</string>
    <string name="fiveDVD">05:DVD</string>
    <string name="fiveAttack">05:功放</string>
    <string name="fiveCustom1">05:自定义1</string>
    <string name="fiveCustom2">05:自定义2</string>
    <string name="fiveCustom3">05:自定义3</string>
    <string name="fiveControl">05:音频控制器</string>
    <string name="musicType1">21:华尔斯</string>
    <string name="musicType2">21:泊声</string>
    <string name="io0">0:1路</string>
    <string name="io1">1:2路</string>
    <string name="io2">2:3路</string>
    <string name="modeSeting">设定</string>
    <string name="paramErr">参数错误!</string>
    <string name="pwd1">密码验证错误</string>
    <string name="pwd2">网络装置不存在</string>
    <string name="pwd3">密码修改失败</string>
    <string name="pwd4">密码修改完成</string>
    <string name="sort">第</string>
    <string name="box">笔</string>
    <string name="downtime">下载时间</string>
    <string name="newSuccess">新增成功</string>
    <string name="option_fail">操作失败.</string>
    <string name="search_success">查询成功</string>
    <string name="modeseted">情景已设定</string>
    <string name="timmingseted">定时已设定</string>
    <string name="matchseted">配对已设定</string>
    <string name="surplus">剩余</string>
    <string name="action_space">剩余空间</string>
    <string name="delSuccess">删除成功</string>
    <string name="tempLed">03:色温LED</string>
    <string name="temp">色温</string>
    <string name="moreLed">03:多彩LED</string>
    <string name="belt">03:灯带</string>
    <string name="inval_words">无效的识别词?</string>
    <string name="security_set">安防设置</string>
    <string name="security_bf">布 防</string>
    <string name="security_cf">撤 防</string>
    <string name="set_buf">已布防</string>
    <string name="set_cef">已撤防</string>
    <string name="on_off_alarm">按开启或关闭键可清除警报</string>
    <string name="modeAuto">模式:自动</string>
    <string name="modeCool">模式:制冷</string>
    <string name="modeClean">模式:除湿</string>
    <string name="work">工作模式</string>
    <string name="modeWin">模式:送风</string>
    <string name="speedAuto">风速:自动</string>
    <string name="speedLow">风速:低</string>
    <string name="speedMiddle">风速:中</string>
    <string name="speedUp">风速:高</string>
    <string name="speedFour">风速:四</string>
    <string name="speedFive">风速:五</string>
    <string name="stateOn">状态:开机</string>
    <string name="All">全部</string>
    <string name="one_io">一路</string>
    <string name="two_io">二路</string>
    <string name="three_io">三路</string>
    <string name="four_io">四路</string>
    <string name="code">编码:</string>
    <string name="input_code">请输入12位机码</string>
    <string name="createDevice">创建设备</string>
    <string name="searching">查询</string>
    <string name="no_item">数据列表没有数据</string>
    <string name="input_pwd">请输入密码</string>
    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="upname">名   称:</string>
    <string name="backupname">备份名称</string>
    <string name="role">授权码:</string>
    <string name="roleinfo">请输入小于6位数授权码</string>
    <string name="ssid_text">名称:</string>
    <string name="psk_text">密码:</string>
</resources>