<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cus_mac_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/upname" />

     

            <EditText
                android:id="@+id/cus_machine" android:background="@drawable/edit_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/backupname" />

           
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cus_pwd_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/role" />

        <EditText
            android:id="@+id/cus_pwd"
            android:layout_width="fill_parent" android:background="@drawable/edit_bg"
            android:layout_height="wrap_content"
            android:digits="@string/register_name_digits"
            android:hint="@string/roleinfo" />
    </LinearLayout>

</LinearLayout>