<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="260dp"
    android:background="@mipmap/test_searche"

    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/IDTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/red"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/IDType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/io_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/oil_gray"
                android:orientation="horizontal"
                android:visibility="gone" >

                <RadioButton
                    android:id="@+id/io_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/oil_gray"
                    android:checked="true"
                    android:text="@string/All" />

                <RadioButton
                    android:id="@+id/io_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/oil_gray"
                    android:text="@string/one_io" />

                <RadioButton
                    android:id="@+id/io_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/oil_gray"
                    android:text="@string/two_io" />

                <RadioButton
                    android:id="@+id/io_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/oil_gray"
                    android:text="@string/three_io" />

                <RadioButton
                    android:id="@+id/io_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/oil_gray"
                    android:text="@string/four_io" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginBottom="40dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/openBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/open_2" />

                <Button
                    android:id="@+id/closeBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/close_1" />

                <Button
                    android:id="@+id/helpNew"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/createDevice" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>