<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e5e5e5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/green" >

        <TextView
            android:id="@+id/backTxt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/back_selector"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/whites"
            android:textSize="17.0sp" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/senceSet"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editeTxt"
            android:layout_width="80.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="2.0dip"
            android:background="@drawable/fun_bg_selector"
            android:gravity="center"
            android:text="@string/edite"
            android:textColor="@color/whites"
            android:textSize="17.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <com.zunder.smart.listview.SwipeListView
            android:id="@+id/deviceList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/emptyName"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/no_item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <Button
            android:id="@+id/bntModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/actionsence"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>