<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e5e5e5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/green" >

        <TextView
            android:id="@+id/backTxt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/whites"
            android:textSize="17.0sp" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/my_device"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editeTxt"
            android:layout_width="80.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="2.0dip"
            android:background="@drawable/fun_bg_selector"
            android:gravity="center"
            android:text="@string/clean"
            android:textColor="@color/whites"
            android:textSize="17.0sp" />
    </RelativeLayout>

    <com.zunder.smart.listview.SwipeListView
        android:id="@+id/codeList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="2dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/emptyName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_item" />

</LinearLayout>