<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e5e5e5"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/green" >

        <TextView
            android:id="@+id/backTxt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/back_selector"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/whites"
            android:textSize="17.0sp" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/senceSet"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editeTxt"
            android:layout_width="80.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="2.0dip"
            android:background="@drawable/fun_bg_selector"
            android:gravity="center"
            android:text="@string/edite"
            android:textColor="@color/whites"
            android:textSize="17.0sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/senceSort"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="16.0sp" />



    <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
        android:id="@+id/modeGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>